v1.0.0
-------------------
! little fix for the MPAA retrieval (thanx to aaron pointing this out and
  providing the fix)
+ added some more checks on valid image and cache directories to prevent
  PHP warnings/errors
+ adding some more comments to the API documentation

v0.9.5 (03.04.2008)
-------------------
* renamed imdb_config.php to imdb_config.class.php
* updated cache page layout
* changed Makefile: the classfiles now go to /usr/share/php which is the PHP
  include_path in the distributions php.ini - this means you no longer need
  to include these files with your apps RPM/DEB packages, but simply add the
  appropriate dependency (and include them directly via the include_path)
! imdb::alsoknow() messed things up on akas.imdb.com if AKA string contained
  only one term in parenthesis
* some W3C fixups to the demo pages
* cleanup of private class properties in class imdb (removing unreferenced
  ones, fixing initialization types, renaming some for clearer conventions)
+ imdb::comment_split() added - returns the same comment as imdb::comment, but
  structured into an array so you can access the elements more easily
+ imdb::plot_split() added similarly as pendant to imdb::plot()
* some more corrections/updates to the API reference

v0.9.4 (31.03.2008)
-------------------
* getting rid of most (all?) of the PHP warnings/notices thrown
! tagline() method missed to exactly extract the tagline from the main page when
  the movie only contained one tagline
! fixed the season display in the demo page which sometimes was caught in an
  endless loop (the API itself was not affected)
+ added a drop-down box to the demo search page to select whether to search for
  a movie or an episode by the given name
* updated some API references to give a better description
* moved the IMDB_Request class to its own file (separate from the imdb_config)
! searching akas.imdb.com did not reveal localized akas; if we find them, they
  are now listed along with their language